--- a/client/src/styles/base/_base.scss
+++ b/client/src/styles/base/_base.scss
@@ -1,4 +1,6 @@
 :root {
+  --error-color: rgb(203, 54, 54);
+
   --bg-color: #111;
   --bg-color-2: #181818;
   --bg-color-3: #1a1a1a;
@@ -60,6 +62,13 @@ h1 {
   line-height: 1.1;
 }
 
+input{
+  border: 2px solid var(--text-color);
+  border-radius: 5px;
+  padding: .3rem .7rem;
+  color: var(--text-color);
+}
+
 button {
   border-radius: 8px;
   border: 2px solid transparent;
@@ -87,6 +96,12 @@ button:focus-visible {
   width: 80%;
   margin-inline: auto;
   padding-block: 2rem;
+}
+
+@media (max-width: 370px) {
+  .container{
+    width: 90%
+  }
 }
 
 // @media (prefers-color-scheme: dark) {
