--- a/client/src/styles/layout/_header.scss
+++ b/client/src/styles/layout/_header.scss
@@ -1,126 +1,124 @@
-@use "../abstracts/vars" as vars;
+@use '../abstracts/vars' as vars;
 
 .wide-screen-menu {
-    padding: .9rem 20%;
-    background-color: var(--bg-color-2);
-    text-transform: capitalize;
+  padding: 0.9rem 20%;
+  background-color: var(--bg-color-2);
+  text-transform: capitalize;
 
-    nav ul {
-        display: flex;
-        align-items: center;
-        list-style: none;
+  nav ul {
+    display: flex;
+    align-items: center;
+    list-style: none;
 
-        li {
-            &:last-of-type {
-                margin-left: auto;
-            }
+    li {
+      &:last-of-type {
+        margin-left: auto;
+      }
 
-            &+li {
-                margin-left: 1rem;
-            }
+      & + li {
+        margin-left: 1rem;
+      }
 
-            a {
-                &:hover {
-                    color: vars.$accent;
-                }
-
-                &.active {
-                    border-bottom: 2px solid vars.$accent;
-                    padding-block: .5rem;
-                }
-            }
-
-            .themeButton {
-                // TODO: animation
-                background-color: transparent;
-                border: 1px solid vars.$accent;
-                color: vars.$accent;
-                transition: box-shadow .3s;
-
-                &:hover {
-                    transition: box-shadow .3s;
-                    border-width: 1px;
-                    box-shadow: vars.$accent 0px 2px 8px 0px;
-                }
-            }
+      a {
+        &:hover {
+          color: vars.$accent;
         }
 
+        &.active {
+          border-bottom: 2px solid vars.$accent;
+          padding-block: 0.5rem;
+        }
+      }
+
+      .themeButton {
+        // TODO: animation
+        background-color: transparent;
+        border: 1px solid vars.$accent;
+        color: vars.$accent;
+        transition: box-shadow 0.3s;
+
+        &:hover {
+          transition: box-shadow 0.3s;
+          border-width: 1px;
+          box-shadow: vars.$accent 0px 2px 8px 0px;
+        }
+      }
     }
+  }
 }
 
 button[data-modal-show],
 button[data-modal-close] {
-    border: none;
-    background-color: transparent;
-    color: vars.$accent;
+  border: none;
+  background-color: transparent;
+  color: vars.$accent;
 }
 
 button[data-modal-show] {
-    display: none;
+  display: none;
 }
 
 .small-screen-menu {
-    border: none;
-    background-color: var(--bg-color-2);
-    padding: .5rem .5rem;
+  border: none;
+  background-color: var(--bg-color-2);
+  padding: 0.5rem 0.5rem;
 
-    &::backdrop {
-        background-color: rgba(10, 10, 10, .5);
-    }
+  &::backdrop {
+    background-color: rgba(10, 10, 10, 0.5);
+  }
 
-    nav ul {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        padding: 1.5rem 5rem;
+  nav ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 1.5rem 5rem;
 
-        li {
-            &+li {
-                margin-left: 0;
-            }
+    li {
+      & + li {
+        margin-left: 0;
+      }
 
-            &:last-of-type {
-                margin-left: 0;
-                margin-block: 1rem;
-            }
+      &:last-of-type {
+        margin-left: 0;
+        margin-block: 1rem;
+      }
 
-            margin-block: 1rem;
+      margin-block: 1rem;
 
-            a {
-                &:hover {
-                    color: vars.$accent;
-                }
-
-                &.active {
-                    border-bottom: 2px solid vars.$accent;
-                    padding-block: .5rem;
-                }
-            }
-
-            .themeButton {
-                background-color: transparent;
-                border: 1px solid vars.$accent;
-                color: vars.$accent;
-                transition: box-shadow .3s;
-
-                &:hover {
-                    transition: box-shadow .3s;
-                    border-width: 1px;
-                    box-shadow: vars.$accent 0px 2px 8px 0px;
-                }
-            }
+      a {
+        &:hover {
+          color: vars.$accent;
         }
 
+        &.active {
+          border-bottom: 2px solid vars.$accent;
+          padding-block: 0.5rem;
+        }
+      }
+
+      .themeButton {
+        background-color: transparent;
+        border: 1px solid vars.$accent;
+        color: vars.$accent;
+        transition: box-shadow 0.3s;
+
+        &:hover {
+          transition: box-shadow 0.3s;
+          border-width: 1px;
+          box-shadow: vars.$accent 0px 2px 8px 0px;
+        }
+      }
     }
+  }
 }
 
 @media (max-width: 400px) {
-    .wide-screen-menu {
-        display: none;
-    }
+  .wide-screen-menu {
+    display: none;
+  }
 
-    button[data-modal-show] {
-        display: block;
-    }
+  button[data-modal-show] {
+    display: block;
+  }
 }
