feat: added an "add" button to the editor.

--- a/client/src/styles/layout/_header.scss
+++ b/client/src/styles/layout/_header.scss
@@ -34,6 +34,7 @@
         // TODO: animation
         background-color: transparent;
         border: 1px solid vars.$accent;
+        padding-top: .45rem;
         color: vars.$accent;
         transition: box-shadow 0.3s;
 
